[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensitive-guard"
version = "0.1.0"
description = "A CLI agent that filters sensitive information before sending to LLMs"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sqlitedict>=2.1.0",
]

[project.scripts]
sensitive-guard = "sensitive_guard.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
